cluster/apps/kube-system/goldilocks/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name goldilocks
  namespace: default
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`goldilocks.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
      services:
        - name: goldilocks-dashboard
          port: 80
          namespace: kube-system
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
